--- a/wizards/traffic_shaper_wizard_multi_all.xml
+++ b/wizards/traffic_shaper_wizard_multi_all.xml
@@ -25,22 +25,22 @@
 	<totalsteps>9</totalsteps>
 	<step>
 		<id>1</id>
-		<title>pfSense Traffic Shaper</title>
+		<title>pfSense 트래픽 셰이퍼</title>
 		<disableheader>true</disableheader>
-		<description>This wizard will provide guidance through setting up the pfSense traffic shaper. &lt;br/&gt;&lt;br/&gt; The wizard may be stopped at any time by clicking the logo image at the top of the screen.
-			&lt;br/&gt;&lt;br/&gt; Please be aware that Custom Bandwidths should not exceed 30% of the interface/link bandwidth. Keep this in mind during the wizard.
+		<description>이 마법사는 pfSense 트래픽 셰이퍼를 설정하여 지침을 제공합니다. &lt;br/&gt;&lt;br/&gt; 마법사는 화면 상단의 로고 이미지를 클릭하여 언제든지 중지 할 수 있습니다.
+			&lt;br/&gt;&lt;br/&gt; 맞춤 대역폭은 인터페이스 / 링크 대역폭의 30 %를 넘지 않아야합니다. 마법사 중에이 사실을 명심하십시오.
 		</description>
 		<fields>
 			<field>
 				<type>listtopic</type>
-				<name>Traffic shaper Wizard</name>
+				<name>트래픽 셰이퍼 마법사</name>
 			</field>
 			<field>
-				<displayname>Enter number of WAN type connections</displayname>
+				<displayname>WAN 유형 연결 수 입력</displayname>
 				<name>numberofconnections</name>
 				<type>input</type>
 				<validate>^[0-9]+$</validate>
-				<description>Number of WAN-type connections (Gateway selected on their interface settings, or dynamic assignment.)</description>
+				<description>WAN 유형 연결 수 (인터페이스 설정에서 선택한 게이트웨이 또는 동적 할당)</description>
 				<bindstofield>ezshaper->step1->numberofconnections</bindstofield>
 			</field>
 			<field>
@@ -48,7 +48,7 @@
 				<name>numberoflocalinterfaces</name>
 				<type>input</type>
 				<validate>^[0-9]+$</validate>
-				<description>Number of local connections (No gateway selected on their interface settings.)</description>
+				<description>로컬 연결 수 (인터페이스 설정에서 게이트웨이를 선택하지 않았습니다.)</description>
 				<bindstofield>ezshaper->step1->numberoflocalinterfaces</bindstofield>
 			</field>
 			<field>
@@ -62,7 +62,7 @@
 	</step>
 	<step>
 		<id>2</id>
-		<title>Shaper configuration</title>
+		<title>셰이퍼 구성자</title>
 		<description>Shaper configuration</description>
 		<javascriptafterformdisplay/>
 		<stepbeforeformdisplay>step2_stepbeforeformdisplay();</stepbeforeformdisplay>
@@ -77,14 +77,14 @@
 	</step>
 	<step>
 		<id>3</id>
-		<title>Voice over IP</title>
+		<title>음성 오버 IP</title>
 		<description>Voice over IP</description>
 		<fields>
 			<field>
 				<name>Enable</name>
 				<type>checkbox</type>
 				<typehint>Prioritize Voice over IP traffic</typehint>
-				<description>This will raise the priority of VOIP traffic above all other traffic.</description>
+				<description>이렇게 하면 VOIP트래픽의 우선 순위가 다른 모든 트래픽보다 높아집니다.</description>
 				<bindstofield>ezshaper-&gt;step3-&gt;enable</bindstofield>
 			</field>
 			<field>
@@ -98,7 +98,7 @@
 			<field>
 				<name>Provider</name>
 				<type>select</type>
-				<description>Choose Generic if the provider isn't listed.</description>
+				<description>제공자가 나열되지 않은 경우 일반을 선택합니다.</description>
 				<bindstofield>ezshaper-&gt;step3-&gt;provider</bindstofield>
 				<options>
 					<option>
@@ -120,12 +120,12 @@
 				</options>
 			</field>
 			<field>
-				<displayname>Upstream SIP Server</displayname>
+				<displayname>업 스트림 SIP서버</displayname>
 				<name>upstream_sip_server</name>
 				<type>inputalias</type>
-				<description>(Optional) If this is chosen, the provider field will be overridden.  This allows providing the IP address of the &lt;strong&gt;remote&lt;/strong&gt; PBX or SIP Trunk to prioritize.  &lt;br /&gt;NOTE: A Firewall Alias can also be used in this location.</description>
+				<description>(선택사항) 이 옵션을 선택하면 공급자 필드가 재정의됩니다.  이를 통해 &lt;strong&gt;원격&lt;/strong&gt; PBX또는 SIP트렁크의 IP주소를 제공하여 우선 순위를 정할 수 있습니다.  &lt;br /&gt;NOTE: 이 위치에 방화벽 별칭을 사용할 수도 있습니다.</description>
 				<bindstofield>ezshaper-&gt;step3-&gt;address</bindstofield>
-				<message>IP Address field is non-blank and doesn't look like an IP address.</message>
+				<message>IP주소 필드는 비어 있지 않으며 IP주소와 다릅니다.</message>
 			</field>
 			<field>
 				<name>Bandwidth</name>
@@ -141,8 +141,8 @@
 	</step>
 	<step>
 		<id>4</id>
-		<title>Penalty Box</title>
-		<description>Penalty Box</description>
+		<title>페널티 박스</title>
+		<description>페널티 박스</description>
 		<disableallfieldsbydefault>true</disableallfieldsbydefault>
 		<fields>
 			<field>
@@ -150,7 +150,7 @@
 				<name>Enable</name>
 				<type>checkbox</type>
 				<typehint>Penalize IP or Alias</typehint>
-				<description>This will lower the priority of traffic from this IP or alias.</description>
+				<description>이렇게 하면 이 IP또는 별칭의 트래픽 우선 순위가 낮아집니다.</description>
 				<enablefields>Address,Bandwidth,BandwidthSpeed</enablefields>
 				<bindstofield>ezshaper-&gt;step4-&gt;enable</bindstofield>
 			</field>
@@ -159,17 +159,17 @@
 				<type>listtopic</type>
 			</field>
 			<field>
-				<name>Address</name>
+				<name>주소</name>
 				<type>inputalias</type>
-				<description>This allows just providing the IP address of the computer(s) to penalize. NOTE: A Firewall Alias can also be used in this location.</description>
+				<description>이는 단지 처벌할 컴퓨터의 IP주소를 제공하는 것을 허용한다. 참고:방화벽 별칭도 이 위치에서 사용할 수 있습니다.</description>
 				<bindstofield>ezshaper-&gt;step4-&gt;address</bindstofield>
-				<message>IP Address field is non-blank and doesn't look like an IP address.</message>
+				<message>IP주소 필드는 비어 있지 않으며 IP주소처럼 보이지 않습니다.</message>
 			</field>
 			<field>
-				<name>Bandwidth</name>
+				<name>대역폭</name>
 				<type>input</type>
 				<validate>^[0-9]*$</validate>
-				<message>Speed must be numerical.</message>
+				<message>속도는 숫자여야 합니다.</message>
 				<bindstofield>ezshaper-&gt;step4-&gt;bandwidth</bindstofield>
 				<combinefieldsbegin>true</combinefieldsbegin>
 			</field>
@@ -179,7 +179,7 @@
 				<dontcombinecells>true</dontcombinecells>
 				<donotdisable>true</donotdisable>
                                 <name>BandwidthSpeed</name>
-				<description>The desired limit to apply.</description>
+				<description>적용할 원하는 제한.</description>
                                 <type>select</type>
 				<options>
 				<option>
@@ -215,8 +215,8 @@
 	</step>
 	<step>
 		<id>5</id>
-		<title>Peer to Peer networking</title>
-		<description>Peer to Peer networking</description>
+		<title>피어 투 피어 네트워킹</title>
+		<description>피어 투 피어 네트워킹</description>
 		<disableallfieldsbydefault>true</disableallfieldsbydefault>
 		<fields>
 			<field>
@@ -224,7 +224,7 @@
 				<name>Enable</name>
 				<type>checkbox</type>
 				<typehint>Lower priority of Peer-to-Peer traffic</typehint>
-				<description>This will lower the priority of P2P traffic below all other traffic.  Please check the items to prioritize lower than normal traffic.</description>
+				<description>이것은 P2P트래픽의 우선 순위를 다른 모든 트래픽보다 낮게 만들 것이다. 일반 교통에 비해 우선 순위를 낮출 수 있도록 항목을 확인해 주세요.</description>
 				<enablefields>p2pCatchAll,Bandwidth,BandwidthSpeed,Aimster,BitTorrent,BuddyShare,CuteMX,DCplusplus,dcc,DirectConnect,DirectFileExpress,EDonkey2000,FastTrack,Gnutella,grouper,hotComm,HotlineConnect,iMesh,Napster,OpenNap,Scour,Shareaza,SongSpy,WinMX</enablefields>
 				<bindstofield>ezshaper-&gt;step5-&gt;enable</bindstofield>
 			</field>
@@ -239,10 +239,10 @@
 				<bindstofield>ezshaper-&gt;step5-&gt;p2pcatchall</bindstofield>
 			</field>
 			<field>
-				<name>Bandwidth</name>
+				<name>대역폭</name>
 				<type>input</type>
 				<validate>^[0-9]*$</validate>
-				<message>Speed must be numerical.</message>
+				<message>속도는 숫자여야 합니다.</message>
 				<bindstofield>ezshaper-&gt;step5-&gt;bandwidth</bindstofield>
 				<combinefieldsbegin>true</combinefieldsbegin>
 			</field>
@@ -252,7 +252,7 @@
                                 <dontcombinecells>true</dontcombinecells>
 				<donotdisable>true</donotdisable>
                                 <name>BandwidthSpeed</name>
-                                <description>The desired limit to apply.</description>
+                                <description>적용할 제한 값.</description>
                                 <type>select</type>
                                 <options>
 				<option>
@@ -426,7 +426,7 @@
 				<name>Enable</name>
 				<type>checkbox</type>
 				<typehint>Prioritize network gaming traffic</typehint>
-				<description>This will raise the priority of gaming traffic to higher than most traffic.</description>
+				<description>이것은 게임 트래픽의 우선 순위를 대부분의 트래픽보다 더 높게 높일 것입니다.</description>
 				<enablefields>BattleNET,EAOrigin,GameForWindowsLive,PlayStationConsoles,Steam,WiiConsoles,XboxConsoles,ARMA2,ARMA3,Battlefield2,Battlefield3,BattlefieldBC2,Borderlands,CallOfDuty,Counterstrike,Crysis2,Crysis3,DeltaForce,DeadSpace2,DeadSpace3,Dirt3,DOOM3,DragonAge2,EmpireEarth,EveOnline,Everquest,Everquest2,FarCry,FarCry2,FarCry3,GunZOnline,HalfLife,LeagueofLegends,Lineage2,MassEffect3,MechwarriorOnline,Minecraft,OperationFlashpointDR,PlanetSide,PlanetSide2,QuakeIII,QuakeIV,StarWarsTOR,TigerWoods2004PS2,TribesAscend,UnrealTournament,WolfensteinEnemyTerritory,WorldOfWarcraft</enablefields>
 				<donotdisable>true</donotdisable>
 				<bindstofield>ezshaper-&gt;step6-&gt;enable</bindstofield>
@@ -736,15 +736,15 @@
 	</step>
 	<step>
 		<id>7</id>
-		<title>Raise or lower other Applications</title>
+		<title>다른 응용 프로그램을 올리거나 내립니다.</title>
 		<disableallfieldsbydefault>true</disableallfieldsbydefault>
-		<description>Raise or lower other Applications</description>
+		<description>다른 애플리케이션 높이기 또는 낮추기</description>
 		<fields>
 			<field>
 				<name>Enable</name>
 				<type>checkbox</type>
 				<typehint>Other networking protocols</typehint>
-				<description>This will help raise or lower the priority of other protocols higher than most traffic.</description>
+				<description>이는 대부분의 트래픽보다 더 높은 다른 프로토콜의 우선 순위를 높이거나 낮추는 데 도움이 될 것입니다.</description>
 				<enablefields>AppleRemoteDesktop,MSRDP,PCAnywhere,VNC,AIM,Facetime,GoogleHangouts,ICQ,IRC,Jabber,MSN,TeamSpeak,TeamSpeak3,Ventrilo,PPTP,IPSEC,iTunesRadio,StreamingMP3,RTSP,RTMP,HTTP,IMAP,LotusNotes,POP3,SMTP,BattleNETDownloader,SteamDownloader,APNS,AppleMobileSync,CrashPlan,CVSUP,DNS,GIT,HBCI,ICMP,MySqlServer,NNTP,Slingbox,SMB,SNMP,Subversion</enablefields>
 				<donotdisable>true</donotdisable>
 				<bindstofield>ezshaper-&gt;step7-&gt;enable</bindstofield>
@@ -1615,7 +1615,7 @@
 			<name>Reload profile notice</name>
 			<type>listtopic</type>
 		</field>
-		<description>    After pressing Finish the system will load the new profile.&lt;br/&gt;    Please note that this may take a moment.&lt;br/&gt;    Also note that the traffic shaper is stateful meaning that only new connections will be shaped.&lt;br/&gt;    If this is an issue please reset the state table after loading the profile.&lt;br/&gt;</description>
+		<description>    Finish(완료)를 누르면 시스템이 새 프로파일을 로드합니다.&lt;br/&gt;    잠시 시간이 걸릴 수도 있으니 참고하시기 바랍니다.&lt;br/&gt;    또한 트래픽 조절기는 상태를 저장하므로 새 연결만 형성됩니다.&lt;br/&gt;    이 문제가 발생하면 프로파일을 로드한 후 상태 테이블을 재설정하십시오.&lt;br/&gt;</description>
 		<fields>
 			<field>
 				<name>Finish</name>
